# ORB_SLAM_Refactored

./: .gitignore
open_source/: .gitignore  local_build.sh
src/orb_slam/: CMakeLists.txt  KeyFrameTrajectory.txt  package.xml
src/orb_slam/Data/: .gitignore  euroc_cam0.yaml  rviz.rviz  rviz.vcg
src/orb_slam/include/: Converter.h  Frame.h  FramePublisher.h  Initializer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapPoint.h  MapPublisher.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  Optimizer.h  PnPsolver.h  Sim3Solver.h  Tracking.h
src/orb_slam/launch/: start_demo.launch
src/orb_slam/src/: Converter.cc  Frame.cc  FramePublisher.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapPoint.cc  MapPublisher.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  Tracking.cc  main.cc
